# SSEF-Bot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/: README.md
classes/: character.py  client.py  stats.py
cogs/information/: README.md  __init__.py
cogs/reminder/: README.md  __init__.py
cogs/submission/: README.md  __init__.py  modals.py  sheets.py  stats.py
cogs/utilities/: README.md  __init__.py
