[tool.poetry]
name = "ssef-bot"
version = "0.1.0"
description = "SSEF's Bot"
authors = ["Vioshim"]
readme = "README.md"
packages = [{ include = "ssef_bot" }]

[tool.poetry.dependencies]
python = "^3.11.7"
"discord.py" = { git = "https://github.com/Rapptz/discord.py.git", rev = "master", extras = [
    "speed",
    "voice",
] }
jishaku = "^2.5.2"
uvloop = { version = "^0.17.0", platform = "linux" }
rapidfuzz = "^3.5.2"
motor = { extras = ["srv"], version = "^3.3.2" }
pymongo = { extras = ["srv"], version = "^4.6.1" }
python-dotenv = "^1.0.0"
d20 = "^1.1.2"
pint = "^0.22"
quantulum3 = {version = "^0.9.0", extras = ["classifier"]}
matplotlib = "^3.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"
motor-stubs = "^1.7.1"
black = { version = "^24.1a1", allow-prereleases = true }
isort = { version = "^5.13.2", extras = [
    "requirements_deprecated_finder",
    "pipfile_deprecated_finder",
] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120 # override black's default line-length
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | .vscode
  | .history
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pyright]
useLibraryCodeForTypes = true
typeCheckingMethod = "basic"
pythonVersion = "3.11.4"
flake8 = "^4.0.1"

[tool.isort]
# make it compatible with black
profile = "black"
